<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BitirmeProjesi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_Matematik">MATEMATİKSEL</string>
    <string name="btn_Harf">HARFLER</string>
    <string name="btn_Boyutlar">BOYUTLAR</string>
    <string name="btn_Konumlar">KONUMLAR</string>
    <string name="btn_Renk">RENKLER</string>
    <string name="btn_Saat">SAAT</string>
    <string name="btnSayiIleri">İleri</string>
    <string name="btnSayiGeri">Geri</string>
    <string name="txt_alti">ALTI</string>
    <string name="txt_bir">BİR</string>
    <string name="txt_iki">İKİ</string>
    <string name="txt_uc">ÜÇ</string>
    <string name="txt_dort">DÖRT</string>
    <string name="txt_bes">BEŞ</string>
    <string name="txt_yedi">YEDİ</string>
    <string name="txt_sekiz">SEKİZ</string>
    <string name="txt_dokuz">DOKUZ</string>
    <string name="txt_on">ON</string>
    <string name="siralanansayi">" "</string>
    <string name="btnSayilariOgren">SAYILARI ÖĞRENELİM</string>
    <string name="btnBasitIslemler">BASİT MATEMATİK İŞLEMLERİ</string>
    <string name="btnSayiSiralama">SAYILARI SIRALA</string>
    <string name="btnSayiSayma">SAYILARI ÖĞRENELİM</string>
    <string name="btnAdetKavrami">KAÇ TANE BALON VAR</string>
    <string name="btnSayilariSiralama">SAYILARI SIRALAMA</string>
    <string name="btnSayiIslemleri">BASİT İŞLEMLER</string>
    <string name="btnMatematikKategoriGeri">GERİ</string>
    <string name="harfbtnbuyuk">BÜYÜK HARFLER</string>
    <string name="harfbtnkucuk">KÜÇÜK HARFLER</string>
    <string name="btnKonus">Konuş</string>
    <string name="btnSayilariSoyle">SAYILARI SÖYLEYELİM</string>
    <string name="sayi1">SAYI 1</string>
    <string name="sayi2">SAYI 2</string>
    <string name="sayi3">SAYI 3</string>
    <string name="btnRenk"></string>
    <string name="renkleriOgrenelim">RENKLERİ ÖĞRENELİM</string>
    <string name="renktest">RENKLER TEST</string>
    <string name="txtBos"></string>
    <string name="harftanitimi">HARFLERİ İNCELEYELİM</string>
     <string name="clock">Clock</string>
    <string name="clock2">Clock2</string>
    <string name="hour">Hour Hand</string>
    <string name="hour2">Hour Hand2</string>
    <string name="btnSesliTest"></string>
    <string name="btnSesAlfabe">Sesler ile Harfleri Bulalım</string>
    <string name="btnSeslerAlfabe">SESLER İLE TEST</string>
    <string name="btn_oyun">HAFIZA OYUNU</string>
    <string name="btnEgitsel">Eğitimsel</string>
    <string name="btnSosyal">Sosyal Davranışlar</string>
     <string name="btnlavabo">LAVABO</string>
    <string name="btnSokak">SOKAK</string>
    <string name="btnOkul">OKUL</string>
    <string name="btnMarket">MARKET</string>
    <string name="tggleYoutubeVideoAc">Video</string>
    <string name="bos"></string>
    <string name="txtKullaniciAdi">User Name: </string>
    <string name="txtSifre">Password: </string>
    <string name="txtSifreTekrar">Password Again: </string>
    <string name="txtSifreOnayla">Password Again: </string>
    <string name="btnEnBuyukSayi">EN BÜYÜK SAYIYI BUL</string>
    

</resources>
