<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anaekranarkaplan"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EgitselAnaEkran" >

    <Button
        android:id="@+id/btnEgitsenAnaEkranGeri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" 
        android:background="@drawable/backk"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRenk"
        android:layout_alignRight="@+id/buttonOyun"
        android:layout_marginBottom="31dp"
        android:background="@drawable/butonresim"
        android:text="@string/btn_Saat"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnAlfabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignLeft="@+id/btnMatematik"
        android:background="@drawable/butonresim"
        android:text="@string/btn_Harf"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnMatematik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnEgitsenAnaEkranGeri"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/butonresim"
        android:text="@string/btn_Matematik"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/buttonOyun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnMatematik"
        android:layout_alignBottom="@+id/btnMatematik"
        android:layout_alignRight="@+id/btnEgitsenAnaEkranGeri"
        android:background="@drawable/butonresim"
        android:text="@string/btn_oyun"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnRenk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        android:layout_toLeftOf="@+id/buttonOyun"
        android:background="@drawable/butonresim"
        android:text="@string/btn_Renk"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

</RelativeLayout>