<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/renklerarkasi" >

    <Button
        android:id="@+id/renkleriOgrenelimGiris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="137dp"
        android:background="@drawable/butonresim"
        android:text="@string/renkleriOgrenelim"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/renklertest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/renkleriOgrenelimGiris"
        android:layout_marginRight="156dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/butonresim"
        android:text="@string/renktest"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnResimKataloguGeri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/txtBos"
        android:background="@drawable/backk" />

</RelativeLayout>
