<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyAnaSayfa"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alfabearka"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnKaydet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etKayitSifreTekrar"
        android:layout_alignRight="@+id/etKayitSifreTekrar"
        android:layout_below="@+id/etKayitSifreTekrar"
        android:layout_marginTop="48dp"
        android:text="KAYDET" />

    <EditText
        android:id="@+id/etKayitKullaniciAdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etKayitSifre"
        android:layout_alignParentTop="true"
        android:layout_marginTop="143dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etKayitSifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etKayitKullaniciAdi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etKayitSifreTekrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etKayitSifre"
        android:layout_below="@+id/etKayitSifre"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etKayitKullaniciAdi"
        android:layout_alignBottom="@+id/etKayitKullaniciAdi"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/txtKullaniciAdi"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etKayitSifreTekrar"
        android:layout_alignBottom="@+id/etKayitSifreTekrar"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/txtSifreOnayla"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etKayitSifre"
        android:layout_alignBottom="@+id/etKayitSifre"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@+id/etKayitSifre"
        android:text="@string/txtSifre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>